re-enable editor; fix vertical spacing issues

--- a/card/static/css/card.css
+++ b/card/static/css/card.css
@@ -459,7 +459,6 @@ ul#singers li#face_woof img {height: 100%;}
 	width: 352px;
 	background-color: #292929;
 	margin: auto;
-	margin-top: 30px;
 	line-height: 56px;
 	padding: 0;
 	background-image: url('../img/record_your_carol_btn.png');
